<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_fragment"
    tools:context=".fragments.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_top_bar"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/primaryColor"
            app:cardElevation="8dp"
            app:cardCornerRadius="20dp"
            tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/scoring_qr_code_list"
            >

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/profile_icon"
                    android:src="@drawable/ic_profile_24"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:padding="1dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:text="@string/profile_static_username"/>

                    <TextView
                        android:id="@+id/profile_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/profile_filler_value"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/profile_static_total_score"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_total_score"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/profile_filler_value"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/profile_static_total_qr_code_count"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_qr_code_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/profile_filler_value"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/profile_static_top_qr_code"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/profile_top_qr_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:gravity="end"
                        android:text="@string/profile_filler_value"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <ImageView
        android:id="@+id/no_qr_codes_found_view"
        android:layout_width="200dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintTop_toBottomOf="@id/profile_top_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scoring_qr_code_list"
        android:visibility="visible"
        android:alpha="0.85"
        android:src="@drawable/no_qr_codes_found"
        android:contentDescription="@string/no_qr_codes_photo_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/scoring_qr_code_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:listSelector="@android:color/darker_gray"
        tools:listitem="@layout/profile_qr_code_list_item"
        app:layout_constraintTop_toBottomOf="@+id/no_qr_codes_found_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/delete_profile_button"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_profile_button">

        <Button
            android:id="@+id/show_login_qrcode_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:text="@string/show_login_qrcode"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/show_gamestatus_qrcode_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/profile_contact_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/show_gamestatus_qrcode_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:text="@string/show_game_status_qrcode"
            android:layout_marginStart="5dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@+id/show_login_qrcode_button"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/profile_contact_button"
            android:layout_width="0dp"
            android:layout_height="72dp"
            android:layout_marginEnd="5dp"
            android:text="@string/show_contact_info"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/show_login_qrcode_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/delete_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        android:text="@string/delete_profile"
        app:layout_constraintTop_toBottomOf="@id/scoring_qr_code_list"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/show_buttons_container"
        />

</androidx.constraintlayout.widget.ConstraintLayout>