...
    <string name="map_search">Search Nearby</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="delete_post">Delete Post</string>
    <string name="show_login_qrcode">Login QR Code</string>
    <string name="show_game_status_qrcode">Stats QR Code</string>
    <string name="go_back_button">Go Back</string>
    <string name="post_scanned_by_tab_name">Scanned by</string>
    <string name="post_comments_tab_name">Comments</string>
    <string name="post_post_tab_name">Post</string>
    <string name="profile_static_email">Email:</string>
    <string name="profile_static_phone">Phone:</string>
    <string name="long_comment">This is a very long comment blah blah blah. This is a very long comment blah blah blah.</string>
    <string name="username">UserName</string>
    <string name="last_location">Last known coordinates</string>
...
